user register altered
